<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>WdgGeometryOptions</class>
 <widget class="QWidget" name="WdgGeometryOptions">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>287</width>
    <height>167</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Geometry Options</string>
  </property>
  <layout class="QFormLayout">
   <property name="labelAlignment">
    <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
   </property>
   <property name="horizontalSpacing">
    <number>1</number>
   </property>
   <property name="verticalSpacing">
    <number>1</number>
   </property>
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <item row="1" column="0">
    <widget class="QLabel" name="textLabelFill">
     <property name="text">
      <string>Fill:</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QComboBox" name="cmbFill">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <item>
      <property name="text">
       <string>Not Filled</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Foreground Color</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Background Color</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Pattern</string>
      </property>
     </item>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="textLabelOutline">
     <property name="text">
      <string>Outline:</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="QComboBox" name="cmbOutline">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <item>
      <property name="text">
       <string comment="Label of the option to not draw outline in Geometry Options">No Outline</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Brush</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Brush (Background Color)</string>
      </property>
     </item>
    </widget>
   </item>
   <item row="3" column="0" colspan="2">
    <widget class="QGroupBox" name="gbPatternTransform">
     <property name="title">
      <string>Pattern Transform</string>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <item row="0" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Rotate:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label_2">
        <property name="text">
         <string>Scale:</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="KisDoubleSliderSpinBox" name="sldRotation" native="true"/>
      </item>
      <item row="1" column="1">
       <widget class="KisDoubleSliderSpinBox" name="sldScale" native="true"/>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>KisDoubleSliderSpinBox</class>
   <extends>QWidget</extends>
   <header location="global">kis_slider_spin_box.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
